--- a/index.css
+++ b/index.css
@@ -1,8 +1,20 @@
+body {
+	background-color:silver;
+	background-image: 
+	radial-gradient(circle at 100% 150%, silver 24%, white 25%, white 28%, silver 29%, silver 36%, white 36%, white 40%, transparent 40%, transparent),
+	radial-gradient(circle at 0    150%, silver 24%, white 25%, white 28%, silver 29%, silver 36%, white 36%, white 40%, transparent 40%, transparent),
+	radial-gradient(circle at 50%  100%, white 10%, silver 11%, silver 23%, white 24%, white 30%, silver 31%, silver 43%, white 44%, white 50%, silver 51%, silver 63%, white 64%, white 71%, transparent 71%, transparent),
+	radial-gradient(circle at 100% 50%, white 5%, silver 6%, silver 15%, white 16%, white 20%, silver 21%, silver 30%, white 31%, white 35%, silver 36%, silver 45%, white 46%, white 49%, transparent 50%, transparent),
+	radial-gradient(circle at 0    50%, white 5%, silver 6%, silver 15%, white 16%, white 20%, silver 21%, silver 30%, white 31%, white 35%, silver 36%, silver 45%, white 46%, white 49%, transparent 50%, transparent);
+	background-size:60px 30px;
+}
+
 .game-box {
-  width: 500px;
-  height: 500px;
+    width: 500px;
+    height: 500px;
 	border: 5px double black;
 	margin: auto;
+	background-color: #66776D;
 }
 
 .hidden {
@@ -14,21 +26,29 @@
 	border: 5px double black;
 	margin: 12% auto;
 	text-align: center;
+	background-color: #D9D0A5;
 }
 
 .menu-heading {
 	font-family: 'Wire One', sans-serif;
 }
 
+.menu-heading: hover {
+	cursor: default;
+}
+
 .menu-option {
 	font-family: 'Wire One', sans-serif;
-	color: gray;
+	color: #837779;
 	display: inline-block;
 	margin-top: 0;
 }
 
 .menu-option:hover {
 	cursor: pointer;
+	color: #818B59;
+}
+
+.menu-option:active {
 	text-decoration: underline;
-	color: black;
 }
