--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ body {
 .double-border {
 	position: absolute;
 	border: 0.6em double black;
-	background-color: #818B59;
+	background-color: #D04E3E;
 }
 
 .double-border > div {
@@ -22,7 +22,7 @@ body {
 }
 
 .game {
-	background-color: #D04E3E;
+	background-color: #5D4B33;
 	background-image: linear-gradient(90deg, rgba(255,255,255,.07) 50%, transparent 50%),
 	linear-gradient(90deg, rgba(255,255,255,.13) 50%, transparent 50%),
 	linear-gradient(90deg, transparent 50%, rgba(255,255,255,.17) 50%),
