--- a/index.css
+++ b/index.css
@@ -85,3 +85,44 @@ body {
 	text-decoration: underline;
 	color: #D04E3E;
 }
+
+.board-row {
+	height: 12.5%;
+	width: 100%;
+	background: black;
+	display: flex;
+	justify-content: center;
+	align-content: center;
+}
+
+.tile-border {
+	height: 100%;
+	width: 12.5%;
+	background: black;
+}
+
+.tile {
+	height: 95%;
+	width: 95%;
+	position: relative;
+	background: white;
+	top: 2.5%;
+	left: 2.5%;
+	display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.board-container {
+	height: 88%;
+	width: 88%;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	margin: auto;
+}
+
+.board {
+	
+}
